# co-doc

./: README.md  docker-compose.yml
backend/: .env.example  alembic.ini  init_db.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260518_add_collaboration_tables.py
backend/app/: config.py  models.py  schemas.py
backend/app/routers/: auth.py  comments.py  documents.py  permissions.py  upload.py
backend/app/utils/: permissions.py  redis_client.py  security.py
backend/app/websockets/: collaboration.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx
frontend/src/hooks/: useCollaboration.js  useOffline.js
frontend/src/pages/: DocumentList.jsx  Editor.jsx  Login.jsx  Register.jsx
frontend/src/styles/: auth.css  documentList.css  editor.css  global.css
frontend/src/utils/: api.js  collaboration.js  hooks.js
