[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "email-validator==2.1.1",
    "fastapi==0.110.0",
    "minio==7.2.5",
    "bcrypt>=4.0.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.29",
    "uvicorn[standard]==0.29.0",
    "redis==5.0.3",
    "websockets==12.0",
    "aioredis==2.0.1",
    "passlib[bcrypt]==1.7.4",
]
